dnl Process this file with autoconf to produce a configure script.
AC_INIT(serv_xlat.c)
AC_CONFIG_HEADER(include/kbd_unicode_config.h)

dnl Check for the XKB extension to get reliable keyboard handling
AC_CHECK_HEADER(X11/XKBlib.h, have_xkb="yes", have_xkb="no")
if test "$have_xkb" = "yes" ; then
	AC_DEFINE(HAVE_XKB,1)
fi

AC_OUTPUT()
